Added animations for pack opening + Refactoring

--- a/src/js/components/navbar/navbar.css
+++ b/src/js/components/navbar/navbar.css
@@ -1,7 +1,8 @@
 .navbar button {
 	background: #fff;
 	border: 1px solid #aaa;
-	padding: 5px;
+	padding: 10px;
+	font-family: Aclonica;
 }
 
 .navbar button:hover {
