--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,7 +11,14 @@ body{
 button{
 	display: inline-block;
 	background: #fff;
-	border: 1px solid black;
-	padding: 10px;
+	box-shadow: inset 0 0 10px 1px #222;
+	border: 1px solid #333;
+	border-radius: 5px;
+	padding: 10px 20px 10px 20px;
 	font-family: Aclonica, serif;
+	box-sizing: border-box;
+}
+
+button:hover{
+	box-shadow: inset 0 0 20px 1px #000;
 }
