--- a/src/js/components/navbar/navbar.css
+++ b/src/js/components/navbar/navbar.css
@@ -1,11 +1,13 @@
 .navbar button {
-	background: #fff;
-	border: 1px solid #aaa;
+	background: #ddd;
+	border: 1px solid #333;
+	border-radius: 7px;
 	padding: 10px;
 	font-family: Aclonica;
+	box-shadow: inset 0 0 15px 1px #222;
 }
 
 .navbar button:hover {
-	border: 1px solid #000;
+	box-shadow: inset 0 0 20px 1px #000;
 	cursor: pointer;
 }
