--- a/src/js/components/pages/card-types/card-types.css
+++ b/src/js/components/pages/card-types/card-types.css
@@ -1,10 +1,19 @@
 .card-types .header {
-	padding-top: 20px;
+	padding-top: 5px;
 	border-bottom: 3px solid #ccc;
 	box-shadow: 0px 10px 15px -9px rgba(170,170,170,1);
 	width: 100%;
-	text-align: center;
 	display: flex;
+}
+
+.card-types .title{
+	width: 70%;
+	margin-left: 5%;
+}
+
+.card-types .title h1{
+	font-size: 40px;
+	margin-top: 22px;
 }
 
 .card-types .search {
@@ -23,9 +32,13 @@
 	text-align: center;
 }
 
+.card-types td{
+	color: #fff4e7;
+}
+
 .card-types th{
-	padding: 12px;
-	box-shadow: inset 0px 0px 20px 1px #aaa;
+	padding: 15px;
+	box-shadow: inset 0 0 20px 1px #aaa;
 }
 
 .card-types table {
@@ -46,13 +59,19 @@
 
 .card-types .itemsPerPage {
 	display: inline-block;
-	margin: 4px;
+	margin: 10px 4px 4px;
 }
 
 .searchButton, .searchField{
 	display: inline-block;
 	background: #fff;
-	border: 1px solid black;
-	padding: 10px;
+	padding: 10px 15px 10px 15px;
 	font-family: Aclonica, serif;
+	box-shadow: inset 0 0 10px 1px #222;
+	border: 1px solid #333;
+	border-radius: 5px;
+}
+
+.searchButton:hover{
+	box-shadow: inset 0 0 20px 1px #000;
 }
