Updated design for add-card-type page

--- a/src/js/components/navbar/navbar.css
+++ b/src/js/components/navbar/navbar.css
@@ -1,6 +1,6 @@
-.navbar {
-	height: 30px;
-}
+/*.navbar {*/
+	/*height: 30px;*/
+/*}*/
 .navbar button {
 	background: #ddd;
 	border: 1px solid #333;
