--- a/src/js/components/pages/add-card-type/addcardtype.css
+++ b/src/js/components/pages/add-card-type/addcardtype.css
@@ -16,6 +16,7 @@ html, body {
 	display: inline-block;
 	padding-left: 5%;
 	width: 70%;
+	font-size: 20px;
 }
 
 .add-card-type-buttons {
@@ -28,9 +29,9 @@ html, body {
 }
 
 .add-card-type-content {
-	background-image: url("https://i.ytimg.com/vi/DGPsaTgSzYQ/maxresdefault.jpg");
-	background-size: 100% 100%;
-    background-repeat: no-repeat;
+	//background-image: url("https://i.ytimg.com/vi/DGPsaTgSzYQ/maxresdefault.jpg");
+	//background-size: 100% 100%;
+    //background-repeat: no-repeat;
 	float: left;
 	width: 100%;
 	height: calc(100vh - 130px);
@@ -41,23 +42,24 @@ html, body {
 	position: relative;
 	display: inline-block;
 	float: left;
-	margin: 80px 0 0 0;
+	margin: 30px 0 0 0;
 	width: 60%;
 	height: calc(100vh - 210px);;
 }
 
 .card-type-view {
-	background-image: url("http://www.hearthcards.net/card_js_templates/card_minion_neutral.png");
-	background-size: 100% 100%;
+	background: url("../open-packs/card.png") no-repeat;
+	border-radius: 50px;
+	background-size: contain;
 	position: relative;
-	width: 50%;
-	height: 80%;
+	width: 461px;
+	height: 767px;
 	margin: 0 auto;
 }
 
 .card-num {
 	border-radius: 50%;
-	font-size: 80px;
+	font-size: 50px;
 	color: #eee;
 	text-align: center;
 	text-shadow: 3px 0 black, 3px 0 black, 3px 0 black, 3px 0 black;
@@ -71,15 +73,18 @@ html, body {
 	margin: 0 auto;
 	position: relative;
 	max-width: 300px;
-	bottom: -35%;
+	bottom: -40%;
+	text-shadow: 3px 0 black, 3px 0 black, 3px 0 black, 3px 0 black;
 }
 
 .card-name h2 {
 	text-align: center;
+	font-size: 45px;
 }
 
 .card-image {
 	border-radius: 50%;
+	font-size: 30px;
 	margin: 0 auto;
 	position: relative;
 	max-width: 200px;
@@ -87,27 +92,28 @@ html, body {
 	text-align: center;
 	vertical-align: middle;
 	top: 15%;
+	text-shadow: 3px 0 black, 3px 0 black, 3px 0 black, 3px 0 black;
 }
 
 .card-image i {
 	position: relative;
-	top: 30%;
-	left: 8%;
+	top: 50%;
+	left: 3%;
 }
 
 .card-cost {
 	left: 10%;
-	top: 5%;
+	top: 7%;
 }
 
 .card-damage {
-	left: 10%;
-	bottom: 5%;
+	left: 12%;
+	bottom: 9%;
 }
 
 .card-health {
-	right: 25px;
-	bottom: 25px;
+	right: 12%;
+	bottom: 8%;
 }
 
 /*Form*/
