--- a/src/js/components/pages/add-card-type/addcardtype.css
+++ b/src/js/components/pages/add-card-type/addcardtype.css
@@ -7,7 +7,8 @@ html, body {
 }*/
 
 .add-card-type-header {
-	border-bottom: 3px solid #ccc;
+    border-bottom: 3px solid #ccc;
+    box-shadow: 0 10px 15px -9px rgba(170,170,170,1);
 	width: 100%;
 	height: 100px;
 }
@@ -62,7 +63,7 @@ html, body {
 	font-size: 50px;
 	color: #eee;
 	text-align: center;
-	text-shadow: 3px 0 black, 3px 0 black, 3px 0 black, 3px 0 black;
+	text-shadow: 3px 0 black;
 	line-height: 50px;
 	position: absolute;
 	width: 50px;
@@ -73,8 +74,8 @@ html, body {
 	margin: 0 auto;
 	position: relative;
 	max-width: 300px;
-	bottom: -40%;
-	text-shadow: 3px 0 black, 3px 0 black, 3px 0 black, 3px 0 black;
+	bottom: -38%;
+	text-shadow: 3px 0 black;
 }
 
 .card-name h2 {
@@ -92,7 +93,7 @@ html, body {
 	text-align: center;
 	vertical-align: middle;
 	top: 15%;
-	text-shadow: 3px 0 black, 3px 0 black, 3px 0 black, 3px 0 black;
+	text-shadow: 3px 0 black;
 }
 
 .card-image i {
