--- a/src/js/components/pages/open-packs/show-cards-modal/ShowCardsModal.css
+++ b/src/js/components/pages/open-packs/show-cards-modal/ShowCardsModal.css
@@ -23,12 +23,16 @@
     font-size: 17px;
     margin: 0;
     position: relative;
-    text-shadow: 2px 0 black, 2px 0 black, 2px 0 black, 2px 0 black;
+    text-shadow: 2px 0 black;
     color: #fff !important;
 }
 
 .cards-modal .card-name{
     top: 125px;
+    left: 3px;
+    font-size: 15px;
+    color: #333333 !important;
+    text-shadow: 1px 0 white;
     text-align: center;
 }
 
@@ -52,8 +56,10 @@
     font-weight: bold;
 }
 
-.cards-modal .card-image{
+.cards-modal .card-img {
+    top: 3px;
+    left: 50px;
     text-align: center;
-    font-size: 16px;
-    font-weight: bold;
+    color: darkorange;
+    text-shadow: 1px 0 black;
 }
