--- a/src/js/components/pages/open-packs/show-cards-modal/ShowCardsModal.css
+++ b/src/js/components/pages/open-packs/show-cards-modal/ShowCardsModal.css
@@ -27,39 +27,25 @@
     color: #fff !important;
 }
 
-.cards-modal .card-name{
-    top: 125px;
-    left: 3px;
-    font-size: 15px;
-    color: #333333 !important;
-    text-shadow: 1px 0 white;
-    text-align: center;
+.modal-card{
+    width: 185px;
+    height: 307px;
 }
 
-.cards-modal .card-cost{
-    left: 13px;
-    top: 12px;
-    font-weight: bold;
+.card.modal-card{
+    transition: top 0.7s ease-in-out, left 0.7s ease-in-out;
+    top: 330px;
+    left: 900px;
+    animation: neonRed 1.5s ease-in-out infinite alternate;
+    background: url("../card.png") no-repeat;
+    background-size: contain;
 }
 
-.cards-modal .card-damage{
-     left: 18px;
-     top: 140px;
-     font-size: 16px;
-     font-weight: bold;
-}
-
-.cards-modal .card-health{
-    left: 110px;
-    top: 120px;
-    font-size: 16px;
-    font-weight: bold;
-}
-
-.cards-modal .card-img {
-    top: 3px;
-    left: 50px;
-    text-align: center;
-    color: darkorange;
-    text-shadow: 1px 0 black;
+@keyframes neonRed {
+    from {
+        box-shadow: 0 0 35px 2px rgb(107, 0, 24);
+    }
+    to {
+        box-shadow: 0 0 45px 3px #ff675f;
+    }
 }
