--- a/src/js/components/pages/open-packs/show-cards-modal/ShowCardsModal.css
+++ b/src/js/components/pages/open-packs/show-cards-modal/ShowCardsModal.css
@@ -18,3 +18,34 @@
     height: 100%;
     color: white;
 }
+
+.cards-modal p{
+    font-size: 17px;
+    margin: 0;
+    position: relative;
+    text-shadow: 2px 0 black;
+    color: #fff !important;
+}
+
+.modal-card{
+    width: 185px;
+    height: 307px;
+}
+
+.card.modal-card{
+    transition: top 0.7s ease-in-out, left 0.7s ease-in-out;
+    top: 330px;
+    left: 900px;
+    animation: neonRed 1.5s ease-in-out infinite alternate;
+    background: url("../card.png") no-repeat;
+    background-size: contain;
+}
+
+@keyframes neonRed {
+    from {
+        box-shadow: 0 0 35px 2px rgb(107, 0, 24);
+    }
+    to {
+        box-shadow: 0 0 45px 3px #ff675f;
+    }
+}
