--- a/src/js/components/pages/add-deck/add-deck.css
+++ b/src/js/components/pages/add-deck/add-deck.css
@@ -36,6 +36,7 @@
 	height: 100%;
 	border-right: 3px solid #ccc;
 	float: left;
+	padding: 16px;
 	box-shadow: 15px 0px 10px -9px rgba(170,170,170,1);
 }
 
@@ -44,7 +45,27 @@
 	height: 100%;
 	border-left: 3px solid #ccc;
 	float: right;
+	padding: 16px;
 	box-shadow: -15px 0px 10px -9px rgba(170,170,170,1);
+}
+
+.add-deck-container .drag-box {
+	padding: 16px;
+	border: 2px solid #ccc;
+	margin: 16px;
+	user-select: none;
+	background-color: #333  ;
+}
+
+.add-deck-container .deck-name {
+	width: 100%;
+	display: inline-block;
+	background: #fff;
+	padding: 10px 15px 10px 15px;
+	font-family: Aclonica, serif;
+	box-shadow: inset 0 0 10px 1px #222;
+	border: 1px solid #333;
+	border-radius: 5px;
 }
 
 .add-deck-container {
