--- a/src/js/components/pages/play-game/play-game.css
+++ b/src/js/components/pages/play-game/play-game.css
@@ -15,16 +15,16 @@
     height: 600px;
     margin-left: 25%;
     top: 140px;
-    animation: boardGlow 1.5s ease-in-out infinite alternate;
+    animation: boardGlow 2s ease-in-out infinite alternate;
     border-radius: 50px;
 }
 
 @keyframes boardGlow {
     from {
-        box-shadow: 0 0 235px 10px rgb(151, 0, 0);
+        box-shadow: 0 0 255px 25px rgb(238, 35, 29);
     }
     to {
-        box-shadow: 0 0 235px 13px #6cb499;
+        box-shadow: 0 0 255px 25px #6cb499;
     }
 }
 
@@ -38,19 +38,22 @@
     text-align: center;
     padding: 0;
     border: none;
+    border-radius: 40%;
     box-shadow: none;
 }
 
 .turn-button.enemy{
     background: url("enemy-turn-button.png") no-repeat;
     background-size: cover;
-
 }
 
 .turn-button.player{
     background: url("end-turn-button.png") no-repeat;
     background-size: cover;
+}
 
+.turn-button:active{
+    border: none;
 }
 
 .turn-button:hover{
@@ -68,6 +71,7 @@
     text-shadow: 2px 0 #222;
     font-size: 17px;
     color: white;
+    z-index: -2;
 }
 
 .enemy-health{
@@ -132,6 +136,15 @@
     background: url("deck.png") no-repeat;
     background-size: contain;
     border-radius: 10px;
+    z-index: 1;
+}
+
+.deck-cards-number{
+    padding-top: 54px;
+    text-align: center;
+    font-size: 25px;
+    color: #eee;
+    text-shadow: 3px -2px #333;
 }
 
 .enemy-deck{
@@ -143,26 +156,29 @@
     background: url("deck.png") no-repeat;
     background-size: contain;
     border-radius: 10px;
+    z-index: 1;
 }
 
 .player-hand{
     position: absolute;
-    height: 100px;
-    width: 500px;
-    top: 92%;
-    left: 400px;
-    //overflow: hidden;
+    height: 440px;
+    width: 1125px;
+    top: 470px;
+    left: 100px;
+    overflow: hidden;
     padding-top: 10px;
+    z-index: -1;
 }
 
 .enemy-hand{
     position: absolute;
-    height: 95px;
-    width: 600px;
-    left: 370px;
-    top: -22px;
+    height: 400px;
+    width: 1120px;
+    left: 100px;
+    top: -25px;
     overflow: hidden;
     padding: 0 30px 30px 30px;
+    z-index: -1;
 }
 
 .enemy-card{
@@ -184,20 +200,22 @@
     width: 100px;
 }
 
+.player-hand .card{
+    width: 80px;
+}
+
 .hand-card:hover{
-    z-index: 10;
-    //transform: none !important;
-    //overflow: hidden;
+    z-index: 90;
+    filter: brightness(150%);
 }
 
 .hand-card .card-image {
-    top: 25px;
+    top: 20px;
     width: 80px;
     text-align: center;
     color: darkorange;
     text-shadow: 1px 0 black;
-    font-size: 15px;
-    left: 5px;
+    font-size: 13px;
     position: relative;
 }
 
@@ -244,7 +262,7 @@
     text-shadow: 1px 0 black;
 }
 
-.enemy-played-cards{
+.enemy-board{
     position: absolute;
     height: 140px;
     width: 68%;
@@ -253,7 +271,7 @@
     text-align: center;
 }
 
-.player-played-cards{
+.player-board{
     position: absolute;
     height: 140px;
     width: 68%;
@@ -266,4 +284,112 @@
     display: inline-block;
     overflow: hidden;
     height: 140px;
+}
+
+.enemy-hero{
+    height: 170px;
+    width: 145px;
+    position: absolute;
+    top: 100px;
+    left: 570px;
+}
+
+.card-on-board .card-health{
+    position: absolute;
+    top: 118px;
+    left: 73px;
+}
+
+.card-on-board .card-damage{
+    position: absolute;
+    top: 118px;
+}
+
+.card-on-board .card-name{
+    position: absolute;
+    top: 98px;
+    text-align: center;
+    left: 5px;
+}
+
+.zoomed-card{
+    z-index: 1;
+    height: 382px;
+    width: 229.5px;
+    position: absolute;
+    top: 370px;
+    left: 820px;
+    border-radius: 15px;
+    background: url("../open-packs/card.png") no-repeat;
+    background-size: contain;
+    box-shadow: 0 0 40px 2px #719ce1;
+    display: none;
+    color: white;
+    font-size: 20px;
+    text-shadow: 2px 0 black;
+}
+
+.zoomed-card .card-name{
+    position: absolute;
+    top: 270px;
+    text-align: center;
+    width: 100%;
+    color: #333;
+    text-shadow: 2px 0 white;
+}
+
+.zoomed-card .card-image{
+    position: absolute;
+    color: darkorange;
+    top: 120px;
+    font-size: 30px;
+    width: 100%;
+    text-align: center;
+}
+
+.zoomed-card .card-cost{
+    position: absolute;
+    top: 30px;
+    left: 25px;
+}
+
+.zoomed-card .card-health{
+    position: absolute;
+    top: 327px;
+    left: 182px;
+}
+
+.zoomed-card .card-damage{
+    position: absolute;
+    top: 326px;
+    left: 33px;
+}
+
+.possible-move{
+    box-shadow: inset 0 0 8px 5px #28B463;
+}
+
+.player-board .card .card-image{
+    left: 7px;
+    top: 30px;
+}
+
+.enemy-board .card .card-image{
+    left: 7px;
+    top: 30px;
+}
+
+/*animations*/
+
+@keyframes drawCard {
+    from{
+        transform: scale(0,0) rotate3d(0,1,0, 90deg);
+        left: 1170px;
+        top: 465px;
+    }
+    to{
+        top: 820px;
+        left: 580px;
+        transform: scale(1,1) rotate3d(0,1,0, -10deg);
+    }
 }
