--- a/src/js/components/pages/add-deck/add-deck.css
+++ b/src/js/components/pages/add-deck/add-deck.css
@@ -36,11 +36,19 @@
 	height: 100%;
 	border-right: 3px solid #ccc;
 	float: left;
+	overflow: auto;
 	padding: 16px;
 	box-shadow: 15px 0px 10px -9px rgba(170,170,170,1);
 }
 
 .add-deck-container .choosed-cards {
+	width: 100%;
+	height: 95%;
+	margin-top: 16px;
+	overflow: auto;
+}
+
+.add-deck-container .container-created-deck {
 	width: 30%;
 	height: 100%;
 	border-left: 3px solid #ccc;
@@ -66,6 +74,22 @@
 	box-shadow: inset 0 0 10px 1px #222;
 	border: 1px solid #333;
 	border-radius: 5px;
+}
+
+.add-deck-container .mana-cost {
+	background-color: #0061FF;
+	padding: 8px;
+	width: 32px;
+	height: 32px;
+	color: white;
+	display: inline;
+	text-align: center;
+	border-radius: 64px;
+	margin-right: 64px;
+}
+
+.add-deck-container .card-name {
+	display: inline;
 }
 
 .add-deck-container {
