--- a/src/js/components/pages/add-deck/add-deck.css
+++ b/src/js/components/pages/add-deck/add-deck.css
@@ -74,6 +74,7 @@
 	box-shadow: inset 0 0 10px 1px #222;
 	border: 1px solid #333;
 	border-radius: 5px;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
 }
 
 .add-deck-container .mana-cost {
@@ -94,4 +95,68 @@
 
 .add-deck-container {
 	height: 500px;
+}
+
+.add-deck-container .animation {
+	-webkit-animation: flickerAnimation 1.5s infinite;
+	-moz-animation: flickerAnimation 1.5s infinite;
+	-o-animation: flickerAnimation 1.5s infinite;
+	animation: flickerAnimation 1.5s infinite;
+}
+
+@keyframes flickerAnimation {
+	0% { 
+		opacity:1;
+		background-color: transparent;
+	}
+	50% { 
+		opacity:0; 
+		background-color: darkorange;
+	}
+	100% {
+		opacity:1; 
+		background-color: transparent;
+	}
+}
+@-o-keyframes flickerAnimation{
+	0% { 
+		opacity:1;
+		background-color: transparent;
+	}
+	50% { 
+		opacity:0; 
+		background-color: darkorange;
+	}
+	100% {
+		opacity:1; 
+		background-color: transparent;
+	}
+}
+@-moz-keyframes flickerAnimation{
+	0% { 
+		opacity:1;
+		background-color: transparent;
+	}
+	50% { 
+		opacity:0; 
+		background-color: darkorange;
+	}
+	100% {
+		opacity:1; 
+		background-color: transparent;
+	}
+}
+@-webkit-keyframes flickerAnimation{
+	0% { 
+		opacity:1;
+		background-color: transparent;
+	}
+	50% { 
+		opacity:0; 
+		background-color: darkorange;
+	}
+	100% {
+		opacity:1; 
+		background-color: transparent;
+	}
 }
