--- a/src/js/components/pages/create-arena-deck/arenadeck.css
+++ b/src/js/components/pages/create-arena-deck/arenadeck.css
@@ -26,7 +26,7 @@
 .arena-content {
     width: 100%;
     float: left;
-    border: 1px solid green;
+    /*border: 1px solid green;*/
 }
 
 /*Choice Cards*/
@@ -34,48 +34,98 @@
 .arena-selection {
     width: 70%;
     float: left;
-    border: 1px solid green;
+    /*border: 1px solid green;*/
 }
 
 .arena-cards {
     max-width: 760px;
-    height: 100%;
+    height: 391px;
     margin: 0 auto;
     padding: 0 10px;
     /*float: left;*/
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
 
 /*Graph*/
 
 .arena-graph {
     max-width: 760px;
+    height: 100%;
     /*float: left;*/
     margin: 0 auto;
-    border: 1px solid orange;
-}
-
-.progress {
-    width: 50px;
-    height: 280px;
-    margin: 0.5% 2%;
-    float: left;
-    background-color: #4CAF50;
+    padding: 0 80px;
+    /*border: 1px solid orange;*/
 }
 
 .bar {
     width: 50px;
-    height: 40%;
+    height: 280px;
+    border-radius: 20px;
     background-color: #ddd;
+    position: relative;
+    margin: 3% 2%;
+    float: left;
+    /*overflow: hidden; */
+}
+
+.progress-0, .progress-1, .progress-2, .progress-3, .progress-4, .progress-5, .progress-6, .progress-7 {
+    width: 50px;
+    height: 50%;
+    bottom: 0px;
+    position: absolute;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background-color: #FF5733;
+
+}
+
+.cost-label {
+    width: 50px;
+    color: #FF5733;
+    position: absolute;
+    bottom: -40px;
+    text-align: center;
+    font-size: 24px;
 }
 
 /*Deck*/
 
 .arena-deck {
     width: 30%;
+    max-height: 800px;
     float: left;
     overflow: auto;
-    border: 1px solid blue;
+    position: relative;
+}
+
+.deck-card {
+    height: 50px;
+    border-radius: 10px;
+    border: 2px solid #ccc;
+    position: relative;
+    margin: 1px 0;
+}
+
+.card-deck-cost {
+    border-radius: 2px;
+    background-color: #3977E5;
+    width: 30px;
+    height: 30px;
+    margin: 9px;
+    float: left;
+    line-height: 30px;
+    text-align: center;
+    font-size: 24px;
+}
+
+.card-deck-name {
+    margin: 9px 30px 9px 0;
+    width: 50%;
+    height: 30px;
+    float: right;
+    line-height: 30px;
+    text-align: right;
+    font-size: 24px;
 }
 
 .card-arena-view {
@@ -86,7 +136,7 @@
 	float: left;
 	width: 231px;
 	height: 384px;
-	margin: 0.5% 1% 0.2% 1%;
+	margin: 5px 1% 2px 1%;
 }
 
 .card-arena-view .card-name {
