--- a/src/js/components/pages/play-game/play-game.css
+++ b/src/js/components/pages/play-game/play-game.css
@@ -394,3 +394,32 @@
     left: 572px;
     border-radius: 60px;
 }
+
+.winner-div{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 900;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    background-color: rgba(0,0,0,0.8);
+    text-align: center;
+    vertical-align: middle;
+}
+
+.winner-name{
+    width: 100%;
+    top: 300px;
+    text-align: center;
+    color: darkorange;
+    text-shadow: 1px 0 black;
+    font-size: 50px;
+    position: relative;
+}
+
+.play-again{
+    position: relative;
+    margin-top: 50px;
+    top: 300px;
+}
